--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=user-service
-spring.datasource.url=jdbc:postgresql://localhost:5432/hibernate_db
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.url=jdbc:postgresql://localhost:5432/gazon_db
+spring.datasource.username=postgres
+spring.datasource.password=12345
