move postgresql to outer gradle.build add spring data dependency to product-service

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ subprojects {
     sourceCompatibility = '17'
 
     dependencies {
+        runtimeOnly 'org.postgresql:postgresql'
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
     }
