--- a/product-service/build.gradle
+++ b/product-service/build.gradle
@@ -1,20 +1,13 @@
+// gazon/user-service/build.gradle
+
+// Здесь мы ПРИМЕНЯЕМ плагин, версия которого УЖЕ ИЗВЕСТНА из корневого файла.
+// Вот почему здесь не нужно указывать версию.
 plugins {
-    id 'java'
-}
-
-group = 'com.eshop'
-version = '1.0-SNAPSHOT'
-
-repositories {
-    mavenCentral()
+    id 'org.springframework.boot'
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
-
-test {
-    useJUnitPlatform()
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
