--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ subprojects {
     sourceCompatibility = '17'
 
     dependencies {
-        runtimeOnly 'org.postgresql:postgresql'
-        compileOnly 'org.projectlombok:lombok'
-        annotationProcessor 'org.projectlombok:lombok'
+        implementation 'org.postgresql:postgresql:42.7.3'
+        compileOnly 'org.projectlombok:lombok:1.18.30'
+        annotationProcessor 'org.projectlombok:lombok:1.18.30'
     }
 }
